Refactor find to use PersonPredicateBuilder